changed header h1 to h2 and added h1 to main

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <body>
     <header>
-        <h1> Phil Garip</h1>
+        <h2> Phil Garip</h2>
     </header>
     <main>
-        
+        <h1>Phil Garip Portfolio</h1>
     </main>
 </body>
 </html>
