added extra metadata and linked stylesheet

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Phil Garip Portfolio</title>
 </head>
 
 <body>
     <header>
         <h2> Phil Garip</h2>
+        <nav
     </header>
     <main>
         <h1>Phil Garip Portfolio</h1>
