--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 
 <body>
     <header>
-        <h2> Phil Garip</h2>
-        <nav
+        header
+        <nav>
+            nav
+        </nav>
     </header>
     <main>
         <h1>Phil Garip Portfolio</h1>
     </main>
+    <footer>
+        <footer>
+    </footer>
 </body>
 </html>
