--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </header>
     <main>
         <h1>Phil Garip Portfolio</h1>
+        <img src="./assets/images/IMG_5193.HEIC" alt="purple neon that reads 'you have my whole heart'" />
     </main>
     <footer>
-        <footer>
+        Contact
     </footer>
 </body>
 </html>
