added classes and coresponding selectors to HTML elements

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Phil Garip Portfolio</title>
 </head>
 
-<body>
-    <header>
+<body class="body">
+    <header class="header">
         header
-        <nav>
+        <nav class="nav">
             nav
         </nav>
     </header>
-    <main>
+    <main class="main">
         
         <h1>Phil Garip Portfolio</h1>
         <img src="./assets/images/IMG_5193.HEIC" alt="purple neon that reads 'you have my whole heart'" />
         
     </main>
-    <footer>
+    <footer class="footer">
         Contact
     </footer>
 </body>
