image file changed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="main">
         
         <h1>Phil Garip Portfolio</h1>
-        <img src="./assets/images/IMG_5193.HEIC" alt="purple neon that reads 'you have my whole heart'" />
+        <img src="./assets/images/IMG_5193.jpg" alt="purple neon that reads 'you have my whole heart'" />
         
     </main>
     <footer class="footer">
