--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         header
         <nav class="nav">
             nav
+            <ul id="nav-list">
+                <li>item 1</li>
+                <li>item 2</li>
+                <li>item 3</li>
+            </ul>
         </nav>
     </header>
     <main class="main">
