restarting from scratch

--- a/index.html
+++ b/index.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
-    <title>Phil Garip Portfolio</title>
-</head>
+<html lang="en">
 
-<body class="body">
-    <header class="header">
-        header
-        <nav class="nav">
-            <ul id="nav-list">
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main">
-        
-        <h1>Phil Garip Portfolio</h1>
-        
-    </main>
-    <footer class="footer">
-        Contact
-    </footer>
-</body>
-</html>
+  <head>
+    <title>Flexbox</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+  </head>
+
+  
