added figure element for image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       
       <main>
         <section>
-           <h1>Phil Garip</h1> 
+           <h1>Phil Garip</h1>
+           <figure>
+               <img src="#" alt="comingsoon" />
+               <figcaption>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel repellat voluptate obcaecati molestias laboriosam ipsa, esse quasi eos aliquid hic autem in ipsam fugiat nulla illo minus dolores amet voluptatibus?</figcaption>
+           </figure> 
         </section>
         <section>
             <h2>Contact</h2>
