reworked form to send an emal when button is clicked

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-      <title>Flexbox</title>
+      <title>Phil Garip</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
@@ -30,12 +30,13 @@
         </section>
         <section>
             <h2>Contact</h2>
-            <form>
-               <label for="name">Name:</label>
-               <input type="text" id="name" name="name"><br>
-               <label for="email">Email:</label>
-               <input type="text" id="email" name="email"> 
-            </form>
+            <form action="mailto:phil.garip@gmail.com" method="post" enctype="text/plain">
+                Name:
+                <input type="text" name="name"><br>
+                E-mail:
+                <input type="text" name="mail"><br>
+                <input type="submit" value="Send">
+                </form>
         </section>  
       </main>
       
