--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Phil Garip</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     </head>
 
     <body>
