added css folder

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <title>Phil Garip</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     </head>
 
     <body>
 
-      <header>
+      <header class="header">
         <nav>
-            <ul>
+            <ul class="list">
                 <li>item 1</li>
                 <li>item 2</li>
                 <li>item 3</li>
@@ -21,14 +21,16 @@
       </header>
       
       <main>
-        <section>
+        <section class="top-section">
            <h1>Phil Garip</h1>
            <figure>
                <img src="#" alt="comingsoon" />
-               <figcaption>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel repellat voluptate obcaecati molestias laboriosam ipsa, esse quasi eos aliquid hic autem in ipsam fugiat nulla illo minus dolores amet voluptatibus?</figcaption>
+               <figcaption>
+                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+               </figcaption>
            </figure> 
         </section>
-        <section>
+        <section class="bottom-section">
             <h2>Contact</h2>
             <form action="mailto:phil.garip@gmail.com" method="post" enctype="text/plain">
                 Name:
@@ -40,7 +42,7 @@
         </section>  
       </main>
       
-      <footer>
+      <footer class="footer">
           <p>&copy; Phil Garip 2021</p>
       </footer>
 
