changed bio to intro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Phil Garip</h1>
     <nav class="nav-links">
       <a href="#">Githhub</a>
-      <a href="#">Bio</a>
+      <a href="#">intro</a>
       <a href="#">contact</a>
     </nav>
   </header>
