video layout test

--- a/index.html
+++ b/index.html
@@ -3,35 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phil Garip</title>
-  <link rel="stylesheet" href="assets/css/reset.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Document</title>
 </head>
-
 <body>
-
-  <header>
+  
+  <header class="header">
     <h1>Phil Garip</h1>
-    <nav class="nav-links">
-      <a href="#">Githhub</a>
-      <a href="#">intro</a>
+    <nav>
+      <a href="#">work</a>
       <a href="#">contact</a>
+      <a href="#">github</a>
     </nav>
   </header>
 
-  <main>
-    <section class="featured-work">
-      <h2>featured work</h2>
+  <main class="main">
+    
+    <figure class="hero-video">
+      <<iframe src="https://player.vimeo.com/video/536142347?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Electrode Attachment Theory"></iframe>
+    </figure>
+
+    <section class="intro">
+      <p>hi, i'm Phil,</p>
+      <p>a new jersey native, photographer, artist, neon bender, web developer in brooklyn.</p>
     </section>
-    <section class="intro"> 
-      <h2>intro</h2>
-    </section>
+    
   </main>
-
-  <footer>
-    <h2>contact</h2>
-
-  </footer>
 
 </body>
 </html>
