--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="main">
     
     <figure class="hero-video">
-      <<iframe src="https://player.vimeo.com/video/536142347?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Electrode Attachment Theory"></iframe>
+      <iframe class="bgvideo" src="https://player.vimeo.com/video/536142347?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Electrode Attachment Theory"></iframe>
     </figure>
 
     <section class="intro">
