added placeholder images

--- a/index.html
+++ b/index.html
@@ -20,17 +20,44 @@
   </header>
 
   <main>
-    <section class="featured-work">
+    <aside class="featured-work">
       <h2>featured work</h2>
-    </section>
+      <iframe src="https://player.vimeo.com/video/536142347?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Electrode Attachment Theory" autoplay muted></iframe>
+    </aside>
+    
     <section class="intro"> 
       <h2>intro</h2>
+      <p>Hi, I'm Phil.</p>
+      <p>A New Jersey native, photographer, artist, neon sign bender, web developer in Brooklyn.</p>
     </section>
+
+    <article>
+      <img src="./assets/images/cowboy-boot copy.jpg">
+    </article>
+
+    <article>
+      <img src="./assets/images/cowboy-boot copy.jpg">
+    </article>
+
+    <article>
+      <img src="./assets/images/cowboy-boot copy.jpg">
+    </article>
+
+    <article>
+      <img src="./assets/images/cowboy-boot copy.jpg">
+    </article>
+
+    <article>
+      <img src="./assets/images/cowboy-boot copy.jpg">
+    </article>
+
+    <article>
+      <img src="./assets/images/cowboy-boot copy.jpg">
+    </article>
   </main>
 
   <footer>
     <h2>contact</h2>
-
   </footer>
 
 </body>
