--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Phil Garip</title>
 </head>
 <body>
   
@@ -19,9 +19,12 @@
   <main>
     <aside class="featured-work">
       <h2>featured work</h2>
-      <iframe src="https://player.vimeo.com/video/536142347?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Electrode Attachment Theory" autoplay muted></iframe>
-    </aside>
+      <div style="padding:56.25% 0 0 0;position:relative;">
+        <iframe src="https://player.vimeo.com/video/536142347?autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <script src="https://player.vimeo.com/api/player.js"></script>
     
+
     <section class="intro"> 
       <h2>intro</h2>
       <p>Hi, I'm Phil.</p>
