--- a/index.html
+++ b/index.html
@@ -3,60 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Phil Garip</title>
 </head>
 <body>
   
   <header class="header">
     <h1>Phil Garip</h1>
-    <nav>
-      <a href="#">work</a>
+    <nav class="nav-links">
+      <a href="#other-work">work</a>
       <a href="#">contact</a>
       <a href="#">github</a>
     </nav>
   </header>
 
   <main>
+    
+  <section class="top-section">
+   
     <aside class="featured-work">
-      <h2>featured work</h2>
-      <div style="padding:56.25% 0 0 0;position:relative;">
-        <iframe src="https://player.vimeo.com/video/536142347?autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <script src="https://player.vimeo.com/api/player.js"></script>
+      <iframe src="https://player.vimeo.com/video/536142347" background="1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    </aside>
     
 
     <section class="intro"> 
-      <h2>intro</h2>
-      <p>Hi, I'm Phil.</p>
-      <p>A New Jersey native, photographer, artist, neon sign bender, web developer in Brooklyn.</p>
+      <h2>Hey –</h2>
+      <p>I'm Phil,</p>
+      <p>a <a style="text-decoration: line-through;">new jersey native</a>,<a style="text-decoration: line-through;"> photographer</a>, <a style="text-decoration: line-through;"> artist</a>, <a style="text-decoration: line-through;"> neon sign bender</a>, web developer in Brooklyn.</p>
     </section>
 
-    <article>
-      <img src="./assets/images/cowboy-boot copy.jpg">
-    </article>
+  </section>
 
-    <article>
-      <img src="./assets/images/cowboy-boot copy.jpg">
-    </article>
+    <section class="other-work" id="other-work">
 
-    <article>
-      <img src="./assets/images/cowboy-boot copy.jpg">
-    </article>
+      <article>
+        <img src="./assets/images/lipstick copy.jpg">
+      </article>
+      <article>
+        <img src="assets/images/rainboNeon copy.jpg">
+      </article>
+      <article>
+        <img src="assets/images/youhavemywholeheart copy.jpg">
+      </article>
+      <article>
+        <img src="assets/images/cowboy-boot copy.jpg">
+      </article>
 
-    <article>
-      <img src="./assets/images/cowboy-boot copy.jpg">
-    </article>
-
-    <article>
-      <img src="./assets/images/cowboy-boot copy.jpg">
-    </article>
-
-    <article>
-      <img src="./assets/images/cowboy-boot copy.jpg">
-    </article>
+    </section>
   </main>
 
-  <footer>
+  <footer class="footer" id="contact">
     <h2>contact</h2>
   </footer>
 
