updated display for intro text to flex

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     
 
     <section class="intro"> 
-      <h2>Hey –</h2>
+      <h3>Hello!</h3>
       <p>I'm Phil,</p>
-      <p>a <a style="text-decoration: line-through;">new jersey native</a>,<a style="text-decoration: line-through;"> photographer</a>, <a style="text-decoration: line-through;"> artist</a>, <a style="text-decoration: line-through;"> neon sign bender</a>, web developer in Brooklyn.</p>
+      <p>a <a style="text-decoration: line-through;"> photographer</a>, <a style="text-decoration: line-through;"> artist</a>, <a style="text-decoration: line-through;"> neon sign bender</a>, web developer in Brooklyn.</p>
     </section>
 
   </section>
