updated footer with external links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Phil Garip</h1>
     <nav class="nav-links">
       <a href="#other-work">work</a>
-      <a href="#">contact</a>
-      <a href="#">github</a>
+      <a href="#contact">contact</a>
+      <a href="#intro">intro</a>
     </nav>
   </header>
 
@@ -26,7 +26,7 @@
     </aside>
     
 
-    <section class="intro"> 
+    <section class="intro" id="intro"> 
       <h3>Hello!</h3>
       <p>I'm Phil,</p>
       <p>a <a style="text-decoration: line-through;"> photographer</a>, <a style="text-decoration: line-through;"> artist</a>, <a style="text-decoration: line-through;"> neon sign bender</a>, web developer in Brooklyn.</p>
@@ -53,7 +53,11 @@
   </main>
 
   <footer class="footer" id="contact">
-    <h2>contact</h2>
+     <section class="external-links">
+      <a href="mailto:phil.garip@gmail.com">email</a>
+      <a href="https://www.instagram.com/p_garip">instagram</a>
+      <a href="https://github.com/phil-garip">github</a>
+     </section>
   </footer>
 
 </body>
