added alt descriptions to images

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <section class="other-work" id="other-work">
 
       <article>
-        <img src="./assets/images/lipstick copy.jpg">
+        <img src="./assets/images/lipstick copy.jpg" alt="neon lipstick tube">
       </article>
       <article>
-        <img src="assets/images/rainboNeon copy.jpg">
+        <img src="assets/images/rainboNeon copy.jpg" alt="neon rainbows">
       </article>
       <article>
-        <img src="assets/images/youhavemywholeheart copy.jpg">
+        <img src="assets/images/youhavemywholeheart copy.jpg" alt="neon that says you have my whole heart">
       </article>
       <article>
-        <img src="assets/images/cowboy-boot copy.jpg">
+        <img src="assets/images/cowboy-boot copy.jpg" alt="neon cowboy boot">
       </article>
 
     </section>
