added heading for other work

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <section class="other-work" id="other-work">
 
+      <h3 class="other-work-heading">other work</h3>
       <article>
         <img src="./assets/images/lipstick copy.jpg" alt="neon lipstick tube">
       </article>
