updated media queries to resize sections for mobile

--- a/index.html
+++ b/index.html
@@ -33,24 +33,25 @@
     </section>
 
   </section>
-
-    <section class="other-work" id="other-work">
+  <section class="bottom-section">
+    <article class="other-work" id="other-work">
 
       <h3 class="other-work-heading">other work</h3>
-      <article>
+      <figure>
         <img src="./assets/images/lipstick copy.jpg" alt="neon lipstick tube">
-      </article>
-      <article>
+      </figure>
+      <figure>
         <img src="assets/images/rainboNeon copy.jpg" alt="neon rainbows">
-      </article>
-      <article>
+      </figure>
+      <figure>
         <img src="assets/images/youhavemywholeheart copy.jpg" alt="neon that says you have my whole heart">
-      </article>
-      <article>
+      </figure>
+      <figure>
         <img src="assets/images/cowboy-boot copy.jpg" alt="neon cowboy boot">
-      </article>
-
-    </section>
+      </figure>
+    </article>
+  </section>  
+  
   </main>
 
   <footer class="footer" id="contact">
