added links to images

--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
 
       <h3 class="other-work-heading">other work</h3>
       <figure>
-        <img src="./assets/images/lipstick copy.jpg" alt="neon lipstick tube">
+        <a href="https://http://www.litebriteneon.com/"><img src="./assets/images/lipstick copy.jpg" alt="neon lipstick tube"></a>
       </figure>
       <figure>
-        <img src="assets/images/rainboNeon copy.jpg" alt="neon rainbows">
+        <a href="https://www.fagsigns.com/our-story"><img src="assets/images/rainboNeon copy.jpg" alt="neon rainbows"></a>
       </figure>
       <figure>
-        <img src="assets/images/youhavemywholeheart copy.jpg" alt="neon that says you have my whole heart">
+        <a href="https://www.shebends.com/"><img src="assets/images/youhavemywholeheart copy.jpg" alt="neon that says you have my whole heart"></a>
       </figure>
       <figure>
-        <img src="assets/images/cowboy-boot copy.jpg" alt="neon cowboy boot">
+        <a href="http://alexdacorte.com/"><img src="assets/images/cowboy-boot copy.jpg" alt="neon cowboy boot"></a>
       </figure>
     </article>
   </section>  
-  
+
   </main>
 
   <footer class="footer" id="contact">
