added captions for images and targets for contact links

--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
       <h3 class="other-work-heading">other work</h3>
       <figure>
         <a href="https://http://www.litebriteneon.com/"><img src="./assets/images/lipstick copy.jpg" alt="neon lipstick tube"></a>
+        <figcaption>"Watermelon Lipsmack", 2019</figcaption>
       </figure>
       <figure>
         <a href="https://www.fagsigns.com/our-story"><img src="assets/images/rainboNeon copy.jpg" alt="neon rainbows"></a>
+        <figcaption>"HomoRainbow", FagSigns, 2020</figcaption>
       </figure>
       <figure>
         <a href="https://www.shebends.com/"><img src="assets/images/youhavemywholeheart copy.jpg" alt="neon that says you have my whole heart"></a>
+        <figcaption>"You Have My Whole Heart", 2021</figcaption>
       </figure>
       <figure>
         <a href="http://alexdacorte.com/"><img src="assets/images/cowboy-boot copy.jpg" alt="neon cowboy boot"></a>
+        <figcaption>"Giddy Up", 2021</figcaption>
       </figure>
     </article>
   </section>  
@@ -57,8 +61,8 @@
   <footer class="footer" id="contact">
      <section class="external-links">
       <a href="mailto:phil.garip@gmail.com">email</a>
-      <a href="https://www.instagram.com/p_garip">instagram</a>
-      <a href="https://github.com/phil-garip">github</a>
+      <a href="https://www.instagram.com/p_garip" target="blank">instagram</a>
+      <a href="https://github.com/phil-garip" target="blank">github</a>
      </section>
   </footer>
 
