--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Phil Garip</title>
+  <link rel="icon" href="https://wallpaperaccess.com/full/869.jpg" type="image/x-icon">
 </head>
 <body>
   
