added first project and screenshot

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <figcaption>"Watermelon Lipsmack", 2019</figcaption>
       </figure>
       <figure>
-        <a href="https://www.fagsigns.com/our-story" target="blank"><img src="assets/images/rainboNeon copy.jpg" alt="neon rainbows"></a>
+        <a href=" https://willsha90.github.io/NYTBestSellerProject/" target="blank"><img src="assets/images/Screen-Shot-2021-05-03-at-10.10.47-AM.jpg" alt="neon rainbows"></a>
         <figcaption>"HomoRainbow", FagSigns, 2020</figcaption>
       </figure>
       <figure>
