updated caption for project 1

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <figcaption>"Watermelon Lipsmack", 2019</figcaption>
       </figure>
       <figure>
-        <a href=" https://willsha90.github.io/NYTBestSellerProject/" target="blank"><img src="assets/images/Screen-Shot-2021-05-03-at-10.10.47-AM.jpg" alt="neon rainbows"></a>
-        <figcaption>"HomoRainbow", FagSigns, 2020</figcaption>
+        <a href=" https://willsha90.github.io/NYTBestSellerProject/" target="blank"><img src="assets/images/Screen-Shot-2021-05-03-at-10.10.47-AM.jpg" alt="NYT or NOT screenshot"></a>
+        <figcaption>"NYT or NOT", 2021</figcaption>
       </figure>
       <figure>
         <a href="https://www.shebends.com/" target="blank"><img src="assets/images/youhavemywholeheart copy.jpg" alt="neon that says you have my whole heart"></a>
